# ai-director

./: .env.example  .gitignore  README.md  requirements.txt  vision_cli.py
app/: __init__.py  api.py  config.py  detector.py  face_recognition.py  labels.py
deploy/: director-vision.service  install_ubuntu.sh
docs/: api.md
robot_dog/: .gitignore  a1z_bridge.py
robot_dog/.devcheck/: a1z_fk.py  app.mjs  app2.mjs  app3.mjs  app4.mjs  app_a1z.mjs  campos.mjs  convert_go2.py  embed_go2_stl.py  logic.mjs  logic_a1z.mjs  package-lock.json  pose_a1z.json  probe_workspace.mjs  replace_stl.py  repo_a1z.json  repo_opena1zt.json  repo_urdf.json  sim.mjs  solve.mjs  solve2.mjs  solve3.mjs  solve4.mjs  solve5.mjs  solve_a1z.mjs  threetest.mjs  tree_a1z.json  tree_gripper.json  tree_opena1zt.json  tree_urdf.json  verify_app_fk.mjs
robot_dog/.devcheck/a1z/meshes/: arm_link1.STL  arm_link2.STL  arm_link3.STL  arm_link4.STL  arm_link5.STL  arm_link6.STL  base_link.STL  gripper_finger_left_link.STL  gripper_finger_rIght_link.STL
robot_dog/.devcheck/a1z/sdk/: OpenA1Z-T-README.md  README.md  README_gripper.md  a1zctl  arm_robot.py  get_robot.py  get_robot_gripper.py  gripper.py  kinematics.py  openclaw-integration.md  pyproject.toml  robot.py  server_gripper.py
robot_dog/.devcheck/a1z/urdf/: A1Z_Flange.urdf  A1Z_G1Z.urdf  A1Z_nogripper.csv  joint_names.yaml
robot_dog/.devcheck/go2/meshes/: go2_base.STL  go2_calf.STL  go2_calf_mirror.STL  go2_foot.STL  go2_hip.STL  go2_thigh.STL  go2_thigh_mirror.STL
